--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "http-errors": "^2.0.0",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
@@ -24,5 +25,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/http-errors": "^2.0.1"
   }
 }
