--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.1.2",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
@@ -24,9 +22,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@types/http-errors": "^2.0.1"
+    "@types/http-errors": "^2.0.1",
+    "@types/node": "20.1.2",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4"
   }
 }
